# ACS

ACS_HW1-main/: Bishaev_Alan__209.docx
ACS_HW1-main/Answers/: 1.txt  2.txt  3.txt  4.txt  5.txt
ACS_HW1-main/Shapes/: CMakeLists.txt  circle.c  circle.h  container.c  container.h  main.c  pch.c  pch.h  rectangle.c  rectangle.h  shape.c  shape.h  triangle.c  triangle.h
ACS_HW1-main/Tests/: 1.txt  2.txt  3.txt  4.txt  5.txt
HW3_acs-main/: Bishaev_Alan.docx
HW3_acs-main/Answers/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
HW3_acs-main/Program/: circle.py  container.py  exceptions.py  extender.py  generatorAndWriter.py  main.py  point.py  rectangle.py  shape.py  triangle.py
HW3_acs-main/Tests/: test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
HW_acs2-main/: Пояснительная записка.docx
HW_acs2-main/Input/: 1.in  2.in  3.in  4.in  5.in
HW_acs2-main/Output/: 1.out  2.out  3.out  4.out  5.out  6.out
HW_acs2-main/Program/: CMakeLists.txt  Circle.cpp  Circle.h  Container.cpp  Container.h  Figure.cpp  Figure.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  main.cpp
alan_acs_hw5-main/: Пояснительная записка.docx
alan_acs_hw5-main/Program/: Bishaev_Alan_202_HW5.cpp
alan_acs_hw5-main/Входные данные/: Input.txt
alan_acs_hw5-main/Выходные данные/: 1.txt  2.txt  3.txt  4.txt  5.txt
